--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 target="_blank"
                 class="text-white fs-6 text-decoration-none"
               >
-                sajiboahid.007
+                Sajib Oahid
               </a>
             </div>
           </div>
@@ -346,7 +346,7 @@
             >
               <i class="bi bi-github fs-4 me-2"></i>
               <a
-                href="https://github.com/"
+                href="https://github.com/Sajiboahid007?tab=overview&from=2025-08-01&to=2025-08-31/"
                 target="_blank"
                 class="text-white fs-6 text-decoration-none"
               >
