--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <!-- Photo -->
           <div class="col-12 col-md-4 text-center">
             <img
-              src="Sajib2.jpg"
+              src="sajib2.jpg"
               alt="Sajib Oahid"
               class="img-fluid rounded-circle shadow"
             />
